--- a/learn-react/forms-and-inputs/src/index.css
+++ b/learn-react/forms-and-inputs/src/index.css
@@ -79,6 +79,13 @@ button:active {
   border-color: #33059e;
 }
 
+button:disabled, button:disabled:hover {
+  background: #ccc;
+  cursor: not-allowed;
+  color: #202020;
+  border-color: #bbb;
+}
+
 .form-actions {
   text-align: right;
 }
