--- a/learn-react/practice-http/src/components/Meals/AvailableMeals.module.css
+++ b/learn-react/practice-http/src/components/Meals/AvailableMeals.module.css
@@ -5,6 +5,14 @@
   animation: meals-appear 1s ease-out forwards;
 }
 
+.loading {
+  text-align: center;
+  color: white;
+}
+.err {
+  text-align: center;
+  color: red;
+}
 .meals ul {
   list-style: none;
   margin: 0;
