add font awesome library

--- a/blogApp/src/components/layouts/NavBar/NavBar.module.css
+++ b/blogApp/src/components/layouts/NavBar/NavBar.module.css
@@ -1,5 +1,17 @@
 .top {
-    background: aqua;
+    background: white;
     width: 100%;
     height: 50px;
+    position: sticky;
+    top: 0;
+    display: flex;
+    font-family: 'Josefin Sans', sans-serif;
+}
+
+.logo, .actions {
+    flex: 3;
+}
+
+.links {
+    flex: 6;
 }
