--- a/blogApp/src/components/layouts/NavBar/NavBar.module.css
+++ b/blogApp/src/components/layouts/NavBar/NavBar.module.css
@@ -8,10 +8,52 @@
     font-family: 'Josefin Sans', sans-serif;
 }
 
-.logo, .actions {
+.top > div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.socials , .profile {
     flex: 3;
 }
 
-.links {
+.nav {
     flex: 6;
+}
+
+.nav ul {
+    display: flex;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.nav ul li {
+    font-weight: 300;
+    font-size: 18px;
+    margin-right: 20px;
+    cursor: pointer;
+}
+
+.socials i {
+    font-size: 20px;
+    margin-right: 15px;
+    color: #444;
+    cursor: pointer;
+}
+
+.profile img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.profile i {
+    font-size: 20px;
+    color: #666;
+    cursor: pointer;
+    margin-left: 15px;
 }
